--- a/src/sass/animate/helpers/_settings.sass
+++ b/src/sass/animate/helpers/_settings.sass
@@ -46,30 +46,12 @@ $use-fadeInLeftBig: $use-fade-in !default
 $use-fadeInRight: $use-fade-in !default
 $use-fadeInRightBig: $use-fade-in !default
 
-$use-fade-out: $use-fade !default
-$use-fadeOut: $use-fade-out !default
-$use-fadeOutUp: $use-fade-out !default
-$use-fadeOutUpBig: $use-fade-out !default
-$use-fadeOutDown: $use-fade-out !default
-$use-fadeOutDownBig: $use-fade-out !default
-$use-fadeOutLeft: $use-fade-out !default
-$use-fadeOutLeftBig: $use-fade-out !default
-$use-fadeOutRight: $use-fade-out !default
-$use-fadeOutRightBig: $use-fade-out !default
-
 $use-bounce-in: $use-bounce !default
 $use-bounceIn: $use-bounce-in !default
 $use-bounceInUp: $use-bounce-in !default
 $use-bounceInDown: $use-bounce-in !default
 $use-bounceInLeft: $use-bounce-in !default
 $use-bounceInRight: $use-bounce-in !default
-
-$use-bounce-out: $use-bounce !default
-$use-bounceOut: $use-bounce-out !default
-$use-bounceOutUp: $use-bounce-out !default
-$use-bounceOutDown: $use-bounce-out !default
-$use-bounceOutLeft: $use-bounce-out !default
-$use-bounceOutRight: $use-bounce-out !default
 
 $use-rotate-in: $use-rotate !default
 $use-rotateIn: $use-rotate-in !default
@@ -78,26 +60,12 @@ $use-rotateInUpRight: $use-rotate-in !default
 $use-rotateInDownLeft: $use-rotate-in !default
 $use-rotateInDownRight: $use-rotate-in !default
 
-$use-rotate-out: $use-rotate !default
-$use-rotateOut: $use-rotate-out !default
-$use-rotateOutUpLeft: $use-rotate-out !default
-$use-rotateOutUpRight: $use-rotate-out !default
-$use-rotateOutDownLeft: $use-rotate-out !default
-$use-rotateOutDownRight: $use-rotate-out !default
-
 $use-slide-in: $use-slide !default
 $use-slideIn: $use-slide-in !default
 $use-slideInUp: $use-slide-in !default
 $use-slideInDown: $use-slide-in !default
 $use-slideInLeft: $use-slide-in !default
 $use-slideInRight: $use-slide-in !default
-
-$use-slide-out: $use-slide !default
-$use-slideOut: $use-slide-out !default
-$use-slideOutUp: $use-slide-out !default
-$use-slideOutDown: $use-slide-out !default
-$use-slideOutLeft: $use-slide-out !default
-$use-slideOutRight: $use-slide-out !default
 
 $use-flip: $use-flipers !default
 $use-flipInX: $use-flipers !default
@@ -106,7 +74,6 @@ $use-flipOutX: $use-flipers !default
 $use-flipOutY: $use-flipers !default
 
 $use-lightSpeedIn: $use-light-speed !default
-$use-lightSpeedOut: $use-light-speed !default
 
 $use-bounce: $use-attention-seekers !default
 $use-flash: $use-attention-seekers !default
@@ -115,11 +82,10 @@ $use-wiggle: $use-attention-seekers !default
 $use-swing: $use-attention-seekers !default
 $use-shake: $use-attention-seekers !default
 $use-tada: $use-attention-seekers !default
-$use-wobble: true
+$use-wobble: $use-attention-seekers !default
 
 $use-hinge: $use-special !default
 $use-rollIn: $use-special !default
-$use-rollOut: $use-special !default
 
 $use-zoom-in: $use-zoom !default
 $use-zoomIn: $use-zoom-in !default
@@ -127,10 +93,3 @@ $use-zoomInDown: $use-zoom-in !default
 $use-zoomInLeft: $use-zoom-in !default
 $use-zoomInRight: $use-zoom-in !default
 $use-zoomInUp: $use-zoom-in !default
-
-$use-zoom-out: $use-zoom !default
-$use-zoomOut: $use-zoom-out !default
-$use-zoomOutDown: $use-zoom-out !default
-$use-zoomOutLeft: $use-zoom-out !default
-$use-zoomOutRight: $use-zoom-out !default
-$use-zoomOutUp: $use-zoom-out !default
